--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           cp ./frontend/edward-profolio/index.html ./frontend/edward-profolio/index.html.backup
           
-          sed -i 's/YOUR-CLIENT-ID/${{ secrets.VITE_ADSENSE_CLIENT_ID }}/g' ./index.html
+          sed -i 's/YOUR-CLIENT-ID/${{ secrets.VITE_ADSENSE_CLIENT_ID }}/g' ./frontend/edward-profolio/.html
           
           # Optional: Display diff to verify changes (remove in production)
           echo "Changes made:"
